error_file/1047231error.err
/home/mvries/.conda/envs/dcfn/lib/python3.7/site-packages/torch/nn/_reduction.py:44: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.
  warnings.warn(warning.format(ret))
Traceback (most recent call last):
  File "main.py", line 392, in <module>
    model = eval(to_eval)
  File "<string>", line 1
    networks_resnet.ResNet(networks_resnet.BasicBlock,layers=[,block_inplanes=networks_resnet.get_inplanes(), input_shape=img_size, num_clusters=num_clusters, num_features=num_features)
                                                              ^
SyntaxError: invalid syntax
